# fast-api-chat2

./: main.py  pyproject.toml
templates/: home.html
